--- a/src/main/resources/static/CSS/main.css
+++ b/src/main/resources/static/CSS/main.css
@@ -13,7 +13,7 @@ div.transbox {
 
 body {
 
-    background-image: url(../Images/background2.jpg);
+    background-image: url(../../Images/background2.jpg);
     background-repeat: no-repeat;
     background-position: bottom;
     background-attachment: fixed;
@@ -84,7 +84,7 @@ body {
     margin: 0;
     position: absolute;
     top: 70%;
-    left: 44%;
+    left: 43%;
 }
 
 
