--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="../static/main.css" rel="stylesheet" type="text/css">
+    <link href="../static/CSS/main.css" rel="stylesheet" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>Vacation Manager</title></head>
 <body>
@@ -19,7 +19,7 @@
 <div class="accountButtons">
         <div class="vertical-center-login">
             <form action="/goToLogin" method="post">
-            <button class="btn btn-white btn-animate" style="padding-right: 20px;padding-left: 10px; font-size: 40px"> Login</button>
+            <button class="btn btn-white btn-animate" style="padding-right: 20px;padding-left: 10px; font-size: 40px"> Login </button>
             </form>
             </div>
         <br>
@@ -27,7 +27,7 @@
         <br>
         <div class="vertical-center-register">
             <form action="/goToRegister" method="post">
-                <button class="btn btn-white btn-animate" style="padding-right: 20px;padding-left: 10px; font-size: 40px">Register</button>
+                <button class="btn btn-white btn-animate" style="padding-right: 20px;padding-left: 10px; font-size: 40px"> Register </button>
             </form>
             </div>
 </div>
