--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,12 +13,14 @@
 </center>
 
     <header>
-
+        <form action="/goToRequestVacation">
         <a class="navButton" href="#"><button>Request vacation</button></a>
+        </form>
     </header>
+
 <div class="accountButtons">
         <div class="vertical-center-login">
-            <form action="/goToLogin" method="post">
+            <form action="/goToLogin">
             <button class="btn btn-white btn-animate" style="padding-right: 20px;padding-left: 10px; font-size: 40px"> Login </button>
             </form>
             </div>
@@ -29,6 +31,8 @@
             <form action="/goToRegister" method="post">
                 <button class="btn btn-white btn-animate" style="padding-right: 20px;padding-left: 10px; font-size: 40px"> Register </button>
             </form>
+
+
             </div>
 
 
